--- a/index.html
+++ b/index.html
@@ -760,6 +760,86 @@
     <script src="./packages/js/main.js"></script>
 
 
+
+
+
+/* Your general CSS styles */
+
+/* Media query for 768px screen width or less */
+@media screen and (max-width: 768px) {
+  .skills__container {
+    display: block;
+    padding: 0 20px; /* Adjust padding for smaller screens */
+  }
+
+  .skills__container img {
+    width: 40px; /* Adjust image size for smaller screens */
+  }
+
+  .skills__header {
+    padding: 15px; /* Adjust padding for smaller screens */
+  }
+
+  .skills__icon,
+  .skills__arrow {
+    font-size: 1.5rem; /* Adjust font size for smaller screens */
+  }
+
+  .skills__titles {
+    flex-direction: column; /* Stack titles vertically for smaller screens */
+    align-items: flex-start; /* Align titles to the left for smaller screens */
+    margin-bottom: 10px; /* Adjust margin for smaller screens */
+  }
+
+  .skills__name {
+    font-size: 1rem; /* Adjust font size for smaller screens */
+  }
+
+  .skills__list {
+    padding-left: 20px; /* Adjust padding for smaller screens */
+  }
+
+  .skills__percentage {
+    height: 3px; /* Adjust bar height for smaller screens */
+  }
+
+  /* Adjust width of skills for smaller screens */
+  .skills__html,
+  .skills__css,
+  .skills__js,
+  .skills__wordpress,
+  .skills__python,
+  .skills__tab,
+  .skills__sql,
+  .skills__google,
+  .skills__bank,
+  .skills__google,
+  .skills__counter,
+  .skills__office {
+    width: 100%;
+  }
+
+  .skills__close .skills__list,
+  .skills__open .skills__list {
+    height: auto; /* Reset height for smaller screens */
+    margin-bottom: 15px; /* Adjust margin for smaller screens */
+  }
+
+  .skills__open .skills__arrow {
+    transform: none; /* Reset arrow rotation for smaller screens */
+  }
+}
+
+
+
+
+
+
+
+
+
+                
+
     
 </body>
 
