--- a/index.html
+++ b/index.html
@@ -828,6 +828,17 @@
   .skills__open .skills__arrow {
     transform: none; /* Reset arrow rotation for smaller screens */
   }
+  .skills__header {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center; /* Center align icons */
+    align-items: center; /* Center align vertically */
+  }
+
+  .skills__icon,
+  .skills__arrow {
+    margin: 5px; /* Add margin between icons */
+  }
 }
 
 
