--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
             <!--==================== QUALIFICATION 3 ====================--> 
             <div class="qualification__data">
                 <div>
-                    <h3 class="qualification__title">Diploma in Computer Software Engineering</h3>
+                    <h3 class="qualification__title">BSC in Computer Software Engineering</h3>
                     <span class="qualification__subtitle">Lincoln University College, Abuja</span>
                     <div class="qualification__calendar">
                        <i class="uil uil-calendar-alt"></i>
